--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=skinet;User Id=SA;Password=Password@1;TrustServerCertificate=True",
-    "Redis": "becoming-lizard-26886.upstash.io:6379,password=AWkGAAIjcDFkZTFjZTUxYTJkNzE0MmZlYTUwNjcxNjM3ZTliNWMzOHAxMA,ssl=true,abortConnection=False"
+    "Redis": "localhost"
   }
 }
 
